--- a/docgen/html_header.html
+++ b/docgen/html_header.html
@@ -27,7 +27,7 @@
 				<tbody>
 					<tr style="height: 56px;">
 						<!--BEGIN PROJECT_LOGO-->
-						<td id="projectlogo"><img alt="Logo" src="$relpath^$projectlogo"/></td>
+						<td id="projectlogo"><img width="80" height="74" alt="Logo" src="$relpath^$projectlogo"/></td>
 						<!--END PROJECT_LOGO-->
 						<!--BEGIN PROJECT_NAME-->
 						<td id="projectalign" style="padding-left: 0.5em;">
